--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Facebook-Log in</title>
   </head>
   <body>
-    <form class="">
+    <form class="" id = "form" onsubmit="">
       <label>Usuario:</label><br>
       <input type="text" id = "user" pattern=""><br>
       <span id = "errorUser"></span><br><br>
