--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,24 @@
     <title></title>
   </head>
   <body>
+    <div class="">
+      <div class="caja-texto">
+        <input type="text" name="" value="">
+      </div><br>
+      <div class="boton">
+        <select class="" name="">
+          <option value="0">Amigos</option>
+          <option value="1">Publico</option>
+        </select>
+        <input type="button" name="" value="Publicar">
+      </div>
+    </div>
+    <br>
+    <div class="">
+      <a href="" id = "publico">Público</a>
+
+    </div>
+
 
     <script src = "assets/js/js2.js"></script>
   </body>
