--- a/index2.html
+++ b/index2.html
@@ -19,9 +19,13 @@
         <input type="button" name="" value="Publicar">
       </div>
     </div>
-    <br>
+    <br><br>
     <div class="">
       <a href="" id = "publico">Público</a>
+      <a href="" id = "amigos">Amigos</a>
+    </div>
+    <br><br>
+    <div class="" id="publicaciones">
 
     </div>
 
