cambios en todo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <form class="" id = "form" onsubmit="">
-      <label>Usuario:</label><br>
-      <input type="text" id = "user" pattern=""><br>
+      <label>Email:</label><br>
+      <input type="text" id = "user"><br>
       <span id = "errorUser"></span><br><br>
       <label>Password:</label><br>
       <input type="password" id = "password"><br>
