--- a/index2.html
+++ b/index2.html
@@ -7,18 +7,21 @@
     <title></title>
   </head>
   <body>
-    <div class="">
-      <div class="caja-texto">
-        <input type="text" name="" value="">
-      </div><br>
-      <div class="boton">
-        <select class="" name="">
-          <option value="0">Amigos</option>
-          <option value="1">Publico</option>
-        </select>
-        <input type="button" name="" value="Publicar">
+    <form class="" >
+      <div class="">
+        <div class="caja-texto">
+          <input type="text" name="" value="" id = "texto" placeholder="Texto a publicar">
+        </div><br>
+        <div class="boton">
+          <select class="" name="">
+            <option value="0">Amigos</option>
+            <option value="1">Publico</option>
+          </select>
+          <input type="button" name="" value="Publicar" id = "post">
+        </div>
       </div>
-    </div>
+
+    </form>
     <br><br>
     <div class="">
       <a href="" id = "publico">Público</a>
