--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
           <input type="text" name="" value="" id = "texto" placeholder="Texto a publicar">
         </div><br>
         <div class="boton">
-          <select class="" name="">
+          <select class="" id = "estado">
             <option value="0">Amigos</option>
             <option value="1">Publico</option>
           </select>
