--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span id = "errorPassword"></span><br>
       <button type="button" name="button" id = "login"><a id="link" href="">Login</a></button>
     </form><br>
-
+<!--los scrip van escritos de general a mas especifico, ya que se llaman en orden vertical-->
     <script src="assets/js/main.js" charset="utf-8"></script>
   </body>
 </html>
