--- a/index2.html
+++ b/index2.html
@@ -10,14 +10,14 @@
     <form class="" >
       <div class="">
         <div class="caja-texto">
-          <input type="text" name="" value="" id = "texto" placeholder="Texto a publicar">
+          <textarea name="name" rows="8" cols="80" id = "texto" placeholder="Texto a publicar"></textarea>
         </div><br>
         <div class="boton">
           <select class="" id = "estado">
             <option value="0">Amigos</option>
             <option value="1">Publico</option>
           </select>
-          <input type="button" name="" value="Publicar" id = "post">
+          <button type="button" name="button" id = "post">Publicar</button>
         </div>
       </div>
 
